force-app/main/default/objects/EOI_Form__c/EOI_Form__c.object-meta.xml
<CustomObject>
    <label>EOI Form</label>
    <nameField>
        <displayFormat>EOI-{0000}</displayFormat>
        <label>EOI Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EOI Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>