force-app/main/default/objects/EOI_Form__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>EOI Forms</relationshipLabel>
    <relationshipName>EOI_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>