force-app/main/default/objects/EOI_Form__c/fields/Correspondence_Address2__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_Address2__c</fullName>
    <label>Correspondence Address 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>