force-app/main/default/objects/EOI_Form__c/fields/Country_of_Issue_Registration3__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Issue_Registration3__c</fullName>
    <label>Country of Issue/ Registration 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>