force-app/main/default/objects/EOI_Form__c/fields/Country_of_Issue_Registration__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Issue_Registration__c</fullName>
    <label>Country of Issue/ Registration</label>
    <length>30</length>
    <type>Text</type>
</CustomField>