force-app/main/default/objects/EOI_Form__c/fields/E_mail3__c.field-meta.xml
<CustomField>
    <fullName>E_mail3__c</fullName>
    <label>E-mail 3</label>
    <type>Email</type>
</CustomField>