force-app/main/default/objects/EOI_Form__c/fields/Fourth_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Applicant_Name__c</fullName>
    <label>Fourth Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>