force-app/main/default/objects/EOI_Form__c/fields/Mobile1__c.field-meta.xml
<CustomField>
    <fullName>Mobile1__c</fullName>
    <label>Mobile 1</label>
    <type>Phone</type>
</CustomField>