force-app/main/default/objects/EOI_Form__c/fields/Mobile3__c.field-meta.xml
<CustomField>
    <fullName>Mobile3__c</fullName>
    <label>Mobile 3</label>
    <type>Phone</type>
</CustomField>