force-app/main/default/objects/EOI_Form__c/fields/Mobile4__c.field-meta.xml
<CustomField>
    <fullName>Mobile4__c</fullName>
    <label>Mobile 4</label>
    <type>Phone</type>
</CustomField>