force-app/main/default/objects/EOI_Form__c/fields/Name_of_Authorized_Signatory2__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Authorized_Signatory2__c</fullName>
    <label>Name of Authorized Signatory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>