force-app/main/default/objects/EOI_Form__c/fields/Passport_Registration_Number4__c.field-meta.xml
<CustomField>
    <fullName>Passport_Registration_Number4__c</fullName>
    <label>Passport/Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>