force-app/main/default/objects/EOI_Form__c/fields/Pre_Registration_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registration_Amount__c</fullName>
    <label>Pre-Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>