force-app/main/default/objects/EOI_Form__c/fields/Second_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Second_Applicant_Name__c</fullName>
    <label>Second Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>