force-app/main/default/objects/EOI_Form__c/fields/Sobha_Connect__c.field-meta.xml
<CustomField>
    <fullName>Sobha_Connect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sobha Connect</label>
    <referenceTo>Sobha_Connect__c</referenceTo>
    <relationshipLabel>EOI Forms</relationshipLabel>
    <relationshipName>EOI_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>