force-app/main/default/objects/EOI_Form__c/fields/Source_of_EOI__c.field-meta.xml
<CustomField>
    <fullName>Source_of_EOI__c</fullName>
    <label>Source of EOI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Sobha Connect</fullName>
            </value>
            <value>
                <fullName>Management Reference</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Sales-Initiative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>