force-app/main/default/objects/EOI_Form__c/fields/Thrid_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Thrid_Applicant_Name__c</fullName>
    <label>Thrid Applicant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>