force-app/main/default/objects/EOI_Form__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Number</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Unit__c.Unit_Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>EOI Forms</relationshipLabel>
    <relationshipName>EOI_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>