force-app/main/default/objects/EOI_Form__c/fields/Valid_until4__c.field-meta.xml
<CustomField>
    <fullName>Valid_until4__c</fullName>
    <label>Valid until 4</label>
    <type>Date</type>
</CustomField>