force-app/main/default/objects/EOI_Form__c/validationRules/CP_is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_is_not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(  Source_of_EOI__c , &quot;Channel Partner&quot;),
OR(
ISBLANK( Channel_Partner__c)))</errorConditionFormula>
    <errorDisplayField>Channel_Partner__c</errorDisplayField>
    <errorMessage>Please select the Channel Partner</errorMessage>
</ValidationRule>