force-app/main/default/objects/EOI_Form__c/validationRules/SC_Is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>SC_Is_not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(  Source_of_EOI__c  , &quot;Sobha Connect&quot;),
OR(
ISBLANK(  Sobha_Connect__c )))</errorConditionFormula>
    <errorDisplayField>Sobha_Connect__c</errorDisplayField>
    <errorMessage>Sobha Connect is not be Blank</errorMessage>
</ValidationRule>